# app/Models/ProductImage.php
@@ -5,16 +5,18 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
-class Categories extends Model
+class ProductImage extends Model
 {
+    protected $table = 'product_images';
     use HasFactory;
 
     protected $fillable = [
-    "name", "image"
+        'name',
+        'product_id',
     ];
 
-    public function products()
+    public function product()
     {
-        return $this->hasMany(Product::class);
+        return $this->belongsTo(Product::class);
     }
 }
